[package]
name = "trandb-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
trandb-common = { path = "../trandb-common" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockito = "1.0"
tokio = { version = "1.0", features = ["full"] }
