[package]
name = "transdb-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
transdb-common = { path = "../transdb-common" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockito = "1.0"
tokio = { version = "1.0", features = ["full"] }
