[package]
name = "transdb-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dev-dependencies]
transdb-server = { path = "../transdb-server" }
transdb-client = { path = "../transdb-client" }
transdb-common = { path = "../transdb-common" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
