[package]
name = "transdb-stress-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "transdb-stress"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.0", features = ["full"] }
transdb-client = { path = "../transdb-client" }
transdb-common = { path = "../transdb-common" }
